# tts

./: .eslintignore  .eslintrc.js  Cargo.toml  README.md  build.rs  build.sh  package.json  postcss.config.js  snowpack.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
public/: index.html
src/: bc.rs  main.rs  msg.rs  proxy.rs  server.rs  speakers.rs  tts.html  tts.rs  twitch_response.html  twitch_token.html  ui.rs
src/main/: index.ts  preload.d.ts  preload.js  window.ts
src/renderer/: App.svelte  Counter.svelte
tts-proxy/: Cargo.toml  README.md
tts-proxy/src/: config.rs  context.rs  lib.rs  main.rs  speakers.rs
tts-proxy/tests/: common.rs  health_check.rs  speak.rs
