cargo-features = ["strip"]

[package]
name = "gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    '.',
    'tts-proxy'
]

[dependencies]
eframe = "0.13.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
open = "1"
crossbeam-channel = "0.5"
futures = "0.3"
home = "0.5.3"
chrono = "0.4"
backtrace = "0.3.60"
lazy_static = "1.4.0"
clipboard = "0.5.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


[profile.release]
strip = true

