[package]
name = "tts-proxy"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "obs-tts-proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features = ["openssl"] }
log = "0.4.14"
env_logger = "0.8.4"
serde = "1.0.126"
serde_derive = "1.0.126"
governor = "0.3.2"
tokio = "1.8.0"
lazy_static = "1.4.0"
