[package]
name = "tts-proxy"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "obs-tts-proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3.0.0-beta.5"
actix-web = { version = "4.0.0-beta.5", features = ["openssl"] }
actix-http = "3.0.0-beta.8"
actix-service = "2.0.0"
log = "0.4.14"
env_logger = "0.8.4"
serde = "1.0.126"
serde_derive = "1.0.126"
governor = "0.3.2"
tokio = "1.8.0"
lazy_static = "1.4.0"

[dev-dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
futures = "0.3.15"
actix-rt = "2.2.0"
