[package]
name = "tts-proxy"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "obs-tts-proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
warp = "0.3.1"
reqwest = { version = "0.11.4", features = ["json", "stream"] }
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
clap = "3.0.0-beta.2"
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-subscriber = "0.2.19"

